# task-scheduler

./: .gitignore  README.md  README_RU.md
lib/: scheduler.h
tests/: CMakeLists.txt  container_ut.cpp  corner_ut.cpp  datatypes_ut.cpp  exception_ut.cpp  future_ut.cpp  invoke_ut.cpp  obj_reference_ut.cpp  order_ut.cpp  simple_ut.cpp
